// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should update global impact reports 1`] = `
Object {
  "summary": Object {
    "-": Object {
      "organization_id": null,
      "person_id": null,
      "type": "impact_report",
    },
  },
}
`;

exports[`should update group impact reports 1`] = `
Object {
  "summary": Object {
    "-1234": Object {
      "organization_id": "1234",
      "person_id": null,
      "type": "impact_report",
    },
  },
}
`;

exports[`should update person impact reports 1`] = `
Object {
  "summary": Object {
    "123-": Object {
      "organization_id": null,
      "person_id": "123",
      "type": "impact_report",
    },
  },
}
`;
